--- a/css/style.css
+++ b/css/style.css
@@ -31,13 +31,17 @@ body {
 .wrapper h1 {
   font-size: 3.6rem;
   text-align: center;
+  margin-bottom: 3rem;
+}
+
+.wrapper .field {
+  margin-bottom: 3rem;
 }
 
 .wrapper .input-box {
   position: relative;
   width: 100%;
   height: 5rem;
-  margin: 3rem 0;
 }
 
 .input-box input {
@@ -65,6 +69,24 @@ body {
   font-size: 2rem;
 }
 
+.field.error .error {
+  display: block;
+} 
+
+.field.error input {
+  border-color: #dc3545;
+}
+
+/* border-color: #dc3545 !important; */
+.field .error-text {
+  color: #dc3545;
+  margin: 0.5rem 0 0.5rem 0;
+  padding-left: 2rem ;
+  font-size: 1.4rem;
+  text-align: left;
+  display: none;
+}
+
 .input-box i:nth-of-type(2) {
   left: unset;
   right: 2rem;
@@ -74,7 +96,7 @@ body {
   display: flex;
   justify-content: space-between;
   font-size: 1.4rem;
-  margin: -1.5rem 0 1.5rem;
+  margin: 0rem 0 1.5rem;
 }
 
 .remember-forget label input {
