--- a/css/style.css
+++ b/css/style.css
@@ -117,15 +117,29 @@ body {
   font-size: 1.6rem;
   color: #333;
   font-weight: 600;
+  /* width: 45%; */
   width: 100%;
   height: 4rem;
-  background-color: #fff;
+  background-color: #eebefa;
   border: none;
   outline: none;
   cursor: pointer;
   border-radius: 4rem;
   box-shadow: 0 0 1rem rgba(0 0, 0, 0.1);
+  transition: all 0.2 ease;
 }
+
+.wrapper .btn:hover {
+  background-color: #e599f7;
+}
+
+.wrapper .btn:active {
+  transform: scale(0.96);
+}
+/* .field-btn{
+  display: flex;
+  justify-content: space-around;
+} */
 
 .wrapper .link {
   font-size: 1.4rem;
